Documente para que sirve cada variable de color, e hice los cambios para el sitio de cartas.

--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -1,5 +1,5 @@
 #footer
-    background: color-footer-background
+    background-color: color-footer-background
     margin-top: 60px
     color: color-grey
     line-height: line-height
