--- a/source/css/_partial/sidebar.styl
+++ b/source/css/_partial/sidebar.styl
@@ -1,4 +1,4 @@
-#sidebar
+ #sidebar
     if sidebar is right
         float: right
         margin-right: - sidebar-width
@@ -10,7 +10,7 @@
         display: none
     .sidebar-top
         clearfix()
-        background: color-theme
+        background-color: color-theme
         padding: 15px 30px
         .sidebar-top-inner
             clearfix()
