--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -19,7 +19,7 @@ html, body, #container
     background: color-theme
 
 body
-    background: color-background
+    background-color: color-body-background
     font: font-size font-sans
     -webkit-text-size-adjust: 100%
 
@@ -30,7 +30,7 @@ code
     font-size: 0.8em
     border-radius: 2px
     font-family: font-mono
-    background-color: #f8f8f8
+    background-color: color-code-background
 
 .container
     position: relative
