--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -9,19 +9,20 @@ if hexo-config("customize.theme_color")
 else
     color-theme = #3b8dbd
 color-grey = #aaa
-color-header-background = #26272b
-color-main-background = #fff
-color-background = #eaeaea
-color-mobile-nav-background = #191919
-color-border = #ddd
-color-border-light = #eee
-color-nav-foreground = rgba(255,255,255,0.7)
-color-nav-background = #33363b
+color-header-background = #234678 // Controla el fondo del logo.
+color-main-background = #fff // Controla el fondo de los posts
+color-body-background = #b1cadc // Controla el lateral, desde donde termina el header.
+color-code-background = #f8f8f8 // Lo agregue. Controla el fondo de los bloques de código.
+color-mobile-nav-background = #191919 // No controla nada. Ver si lo eliminamos.
+color-border = #b1dadc  //ddd
+color-border-light = #e2eef5 //eee
+color-nav-foreground = rgba(255,255,255,0.7) // Opciones de Menu y Subtitulo.
+color-nav-background = #4d7aa1 // Maneja el fondo de los menues.
 color-nav-hover-background = rgba(0,0,0,0.1)
-color-sidebar-background = #f0f0f0
+color-sidebar-background = #e2eef5 // Este color solo lo toma para mobile.
 color-sidebar-text = #777
 color-sidebar-text-dark = #444
-color-footer-background = #33363b
+color-footer-background = #234678 // Controla la barra del footer
 
 // Fonts
 font-sans = "Titillium Web", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", sans-serif
