Implemente los cambios de color y estilo que me pidio HBarassi.

--- a/source/css/_partial/sidebar.styl
+++ b/source/css/_partial/sidebar.styl
@@ -77,7 +77,6 @@
     display: block
     color: color-grey
     padding: 16px 40px 24px
-    border-bottom: 1px solid color-border
     transition: 0.2s ease-in
     text-align: center
     text-decoration: none
@@ -112,6 +111,7 @@
 
 .widget-wrap
     padding: 30px 30px 20px
+    border-top: 1px solid widget-color-border
 
 .widget-title
     font-size: 15px
@@ -151,7 +151,6 @@
         li
             padding: 10px 0
             font-size: font-size + 1
-            border-bottom: 1px solid #E4E4E4
             a
                 color: color-sidebar-text
                 &:before
@@ -179,7 +178,6 @@
     li
         clearfix()
         padding: 10px 0 10px 94px
-        border-bottom: 1px solid color-border
     &.no-thumbnail
         li
             padding: 10px 0px
