--- a/source/css/_responsive.styl
+++ b/source/css/_responsive.styl
@@ -4,6 +4,9 @@
 @media only screen and (min-width: 960px)
     .nav-container-inner
         display: block !important
+    #header-title
+        .subtitle
+            font-size: 32px
 
 /* ------------------------------------------------------------------------- *
  *    Toggle Sidebar s1 : 959px > 480px
@@ -89,7 +92,6 @@
                             &:after,
                             &:before
                                 display: none
-
     #main
         .main-body-header,
         .archive-year-wrap
@@ -165,6 +167,9 @@
     .main-body-inner
         padding: 0px
         background: none
+    #header-title
+        .subtitle
+            display: none
     #main
         float: none
         .main-body-header,
