--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -9,12 +9,13 @@ if hexo-config("customize.theme_color")
 else
     color-theme = #3b8dbd
 color-grey = #aaa
-color-header-background = #234678 // Controla el fondo del logo.
+color-header-background = #52433f // Controla el fondo del logo.
 color-main-background = #fff // Controla el fondo de los posts
-color-body-background = #b1cadc // Controla el lateral, desde donde termina el header.
+color-body-background = #ede0b6 // Controla el lateral, desde donde termina el header.
 color-code-background = #f8f8f8 // Lo agregue. Controla el fondo de los bloques de código.
 color-mobile-nav-background = #191919 // No controla nada. Ver si lo eliminamos.
-color-border = #b1dadc  //ddd
+article-color-border = #4d7aa1 // #b1dadc  //ddd //controla la linea que separa el articulo del boton compartir.
+widget-color-border = white  //ddd //controla la linea que separa el articulo del boton compartir.
 color-border-light = #e2eef5 //eee
 color-nav-foreground = rgba(255,255,255,0.7) // Opciones de Menu y Subtitulo.
 color-nav-background = #4d7aa1 // Maneja el fondo de los menues.
@@ -22,7 +23,7 @@ color-nav-hover-background = rgba(0,0,0,0.1)
 color-sidebar-background = #e2eef5 // Este color solo lo toma para mobile.
 color-sidebar-text = #777
 color-sidebar-text-dark = #444
-color-footer-background = #234678 // Controla la barra del footer
+color-footer-background = #52433f // Controla la barra del footer
 
 // Fonts
 font-sans = "Titillium Web", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", sans-serif
