--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -65,7 +65,8 @@
                 width: 100%
                 height: 100%
                 opacity: 1
-                background-size: cover
+                background-size: contain
+                background-repeat: no-repeat
                 background-position: center
                 transition: opacity 0.3s ease-in
             .thumbnail-none
@@ -110,16 +111,22 @@
     text-decoration: none
     font-size: 38px
     letter-spacing: -1px
-    color: color-default
+    color: #234678
     line-height: line-height-title
     transition: color 0.2s
     margin-bottom: 10px
     a&:hover
         color: color-theme
 
+.article-tags
+    clearfix()
+    margin: 30px
+
 .article-date,
 .article-tag-list
     @extend $block-caption
+    float: right
+    color: #aaa
 
 .article-tag-list
     clearfix()
@@ -175,10 +182,10 @@
         border-spacing: 0
     th
         font-weight: 600
-        border-bottom: 3px solid color-border
+        border-bottom: 3px solid article-color-border
         padding-bottom: 0.5em
     td
-        border-bottom: 1px solid color-border
+        border-bottom: 1px solid article-color-border
         padding: 10px 0
     blockquote
         color: #777
@@ -190,7 +197,7 @@
         &:before
             top: 0
             left: 0
-            color: #ccc
+            color: #4d7aa1
             font-size: 32px
             content: "\f10d"
             position: absolute
@@ -255,7 +262,7 @@
     clearfix()
     font-size: font-size
     line-height: line-height
-    border-top: 1px solid color-border
+    border-top: 1px solid article-color-border
     padding-top: line-height
     a
         color: color-grey
@@ -296,7 +303,7 @@
     padding: 0 15px
     color: color-default
     outline: none
-    border: 1px solid color-border
+    border: 1px solid article-color-border
     border-radius: 3px 3px 0 0
     height: 36px
     line-height: 36px
