Revert "Merge branch 'master' into es.mamaantula"
This reverts commit 2f09e1114d9a0352eafdc261e31e0d378fc429e8, reversing
changes made to b89693ac9732b5027cefc08d75822a4ff13ed31a.

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -116,4 +116,5 @@ code
 @import "_partial/assets"
 @import "_partial/insight"
 @import "_highlight/index"
+@import "_retina"
 @import "_responsive"
