--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -10,6 +10,11 @@
             color: #fff
     .credit
         padding: 30px
+        .logo-wrap
+            float: left
+        .copy-wrap
+            float: right
+            clear: right
     #back-to-top
         background: color-background
         color: #777
