Cambie los iconos de Font Awesome a doble tamao

--- a/source/css/_partial/archive.styl
+++ b/source/css/_partial/archive.styl
@@ -5,8 +5,9 @@
     clearfix()
 
 .archive-year-wrap
-    padding: 18px 30px 17px
+    padding: 13px 30px 13px
     font-size: font-size + 2
+    font-weight: 600
     color: color-default + #111
     border-bottom: 1px solid color-border-light
 
