--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -17,7 +17,7 @@ color-mobile-nav-background = #191919 // No controla nada. Ver si lo eliminamos.
 article-color-border = #4d7aa1 // #b1dadc  //ddd //controla la linea que separa el articulo del boton compartir.
 widget-color-border = white  //ddd //controla la linea que separa el articulo del boton compartir.
 color-border-light = #e2eef5 //eee
-color-nav-foreground = rgba(255,255,255,0.7) // Opciones de Menu y Subtitulo.
+color-nav-foreground = rgba(255,255,255,.9) // Opciones de Menu y Subtitulo.
 color-nav-background = #4d7aa1 // Maneja el fondo de los menues.
 color-nav-hover-background = rgba(0,0,0,0.1)
 color-sidebar-background = #e2eef5 // Este color solo lo toma para mobile.
