--- a/layout/common/head.ejs
+++ b/layout/common/head.ejs
@@ -41,7 +41,27 @@
     <% } %>
 
     <% if (theme.customize.favicon) { %>
+        <link rel="shortcut icon" href="<%- url_for(theme.customize.favicon) %>" />
         <link rel="icon" href="<%- url_for(theme.customize.favicon) %>" />
+        <link rel="icon" type="image/png" sizes="16x16" href="/media/logo/favicon-16x16.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="/media/logo/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="96x96" href="/media/logo/favicon-96x96.png" />
+        <link rel="icon" type="image/png" sizes="230x230" href="/media/logo/favicon-230x230.png" />
+
+        <link rel="apple-touch-icon" sizes="114x114" href="/media/logo/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/media/logo/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/media/logo/apple-touch-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/media/logo/apple-touch-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/media/logo/apple-touch-icon-180x180.png">
+        <link rel="apple-touch-icon" sizes="57x57" href="/media/logo/apple-touch-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/media/logo/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/media/logo/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/media/logo/apple-touch-icon-76x76.png">
+
+    <% } %>
+
+    <% if (is_post() && config.generator_amp){ %>
+        <link rel="amphtml" href="<%= config.url %><%= config.root %><%= page.path %>/amp/index.html">
     <% } %>
 
     <%- css('libs/font-awesome/css/font-awesome.min') %>
